Fixed header alignment

--- a/style.css
+++ b/style.css
@@ -412,7 +412,7 @@ a.nav__item:hover {
 
   a.nav__item {
     display: block;
-    padding: 0.25em 1em 0.25em 0.5em;
+    padding: 0 1em 0.25em 0.5em;
     margin-right: 0;
     border: 0;
     border-radius: var(--radius);
